fixing issue with lastUpdateTime

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -255,7 +255,7 @@
 				<td class='last-build b-r'> {{ entry.build }} </td>
 				<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
 				<td class='last-action-timestamp timeago b-r' title="{{ entry.lastActionTime }}"> </td>
-				<td class='last-checkin-timestamp timeago b-r' title="{{ entry.user.last_photo_update_timestamp }}"> </td>				
+				<td class='last-checkin-timestamp timeago b-r' title="{{ entry.lastCheckinTime }}"> </td>				
 			</tr>
 		{% endfor %}
 		</table>
