Support adding photos to a swap thread

--- a/strand/iOS/Strand/Strand/DFStrandGalleryTitleView.xib
+++ b/strand/iOS/Strand/Strand/DFStrandGalleryTitleView.xib
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" horizontalHuggingPriority="750" id="iN0-l3-epB" customClass="DFStrandGalleryTitleView">
-            <rect key="frame" x="0.0" y="0.0" width="174" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="325" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Sy-97-6b8">
-                    <rect key="frame" x="8" y="22" width="158" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" text="Time Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Sy-97-6b8">
+                    <rect key="frame" x="0.0" y="22" width="325" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="006-2i-JNe">
-                    <rect key="frame" x="8" y="6" width="158" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" text="Location Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="006-2i-JNe">
+                    <rect key="frame" x="0.0" y="6" width="325" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -26,27 +26,21 @@
             </subviews>
             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="0Sy-97-6b8" secondAttribute="trailing" constant="8" id="1J2-oD-Mop"/>
-                <constraint firstItem="006-2i-JNe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="DVr-33-cP2"/>
-                <constraint firstAttribute="centerX" secondItem="006-2i-JNe" secondAttribute="centerX" id="H4b-Xv-8bD"/>
+                <constraint firstAttribute="trailing" secondItem="0Sy-97-6b8" secondAttribute="trailing" id="1J2-oD-Mop"/>
+                <constraint firstItem="006-2i-JNe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="DVr-33-cP2"/>
                 <constraint firstAttribute="centerY" secondItem="0Sy-97-6b8" secondAttribute="centerY" constant="-8" id="PYm-nX-2pa"/>
                 <constraint firstAttribute="centerY" secondItem="006-2i-JNe" secondAttribute="centerY" constant="8" id="UbN-QS-dmF"/>
-                <constraint firstItem="0Sy-97-6b8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="ZZb-b2-aQe"/>
-                <constraint firstAttribute="trailing" secondItem="006-2i-JNe" secondAttribute="trailing" constant="8" id="g6S-e1-lu0"/>
+                <constraint firstItem="0Sy-97-6b8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ZZb-b2-aQe"/>
+                <constraint firstAttribute="trailing" secondItem="006-2i-JNe" secondAttribute="trailing" id="g6S-e1-lu0"/>
                 <constraint firstAttribute="centerX" secondItem="0Sy-97-6b8" secondAttribute="centerX" id="nzq-Eq-BHA"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="H4b-Xv-8bD"/>
-                </mask>
-            </variation>
             <connections>
                 <outlet property="locationLabel" destination="006-2i-JNe" id="6Y4-IT-7ve"/>
                 <outlet property="timeLabel" destination="0Sy-97-6b8" id="bhr-4X-QXE"/>
             </connections>
-            <point key="canvasLocation" x="292" y="47"/>
+            <point key="canvasLocation" x="367.5" y="47"/>
         </view>
     </objects>
 </document>
