--- a/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewController.xib
+++ b/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewController.xib
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFPhotoViewController">
             <connections>
                 <outlet property="photoView" destination="qLd-yU-pjU" id="rYp-6S-C2q"/>
-                <outlet property="toolbar" destination="RoJ-UU-ZGf" id="iI5-rK-Buf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,34 +18,22 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qLd-yU-pjU" customClass="DFPhotoView">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="9nG-T9-qUv" appends="YES" id="XQh-8Q-IlC"/>
                     </connections>
                 </view>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RoJ-UU-ZGf">
-                    <rect key="frame" x="0.0" y="524" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <items/>
-                    <color key="tintColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
-                </toolbar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
             <constraints>
-                <constraint firstItem="RoJ-UU-ZGf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="0pn-4J-NNg"/>
                 <constraint firstItem="qLd-yU-pjU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="F6g-Q3-GTr"/>
-                <constraint firstAttribute="bottom" secondItem="RoJ-UU-ZGf" secondAttribute="bottom" id="Mry-z3-jlD"/>
                 <constraint firstAttribute="trailing" secondItem="qLd-yU-pjU" secondAttribute="trailing" id="Xzb-f7-jlr"/>
                 <constraint firstAttribute="bottom" secondItem="qLd-yU-pjU" secondAttribute="bottom" id="Zyn-zm-ZuY"/>
                 <constraint firstItem="qLd-yU-pjU" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rYv-hr-8h8"/>
-                <constraint firstAttribute="trailing" secondItem="RoJ-UU-ZGf" secondAttribute="trailing" id="w2N-sV-aaV"/>
             </constraints>
-            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedToolbarMetrics key="simulatedBottomBarMetrics" barStyle="black"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
         <tapGestureRecognizer id="9nG-T9-qUv">
             <connections>
@@ -53,4 +41,9 @@
             </connections>
         </tapGestureRecognizer>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
