minor formatting tweak to summary page

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -135,7 +135,7 @@
 			</tr>
 			<tr class='ui-row' >
 				<td class='col1 right b-r'> Photos (metadata)/user </td>
-				<td class='counts'> {{ statsCounts.photosMetadataPerUser|floatformat:0  }} </td>
+				<td class='counts'> {{ statsCounts.photosMetadataPerUser|floatformat:0|intcomma  }} </td>
 			</tr>
 			<tr class='ui-row' >
 				<td class='col1 right b-r'> Shared </td>
