formatting tweak for summary page

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -134,11 +134,11 @@
 				<td class='counts'> {{ statsCounts.photosSharedPerUser|floatformat:1 }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> Photos (metadata)/user </td>
+				<td class='col1 right b-r'> Photos (metadata)/User </td>
 				<td class='counts'> {{ statsCounts.photosMetadataPerUser|floatformat:0|intcomma  }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> Shared </td>
+				<td class='col1 right b-r'> Photos Shared </td>
 				<td class='counts'> {{ statsCounts.percentPhotosShared|floatformat:1 }}% </td>
 			</tr>
 
